# my_history

./: README.md  pyproject.toml
note/: top10.ipynb:Zone.Identifier
src/my_history/: .cli.py.swp  cli.py  cli2.py
src/my_history/db/: .utils.py.swp  utils.py
tests/: test_cli.py
