[project]
name = "my_history"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "GITSangWoo", email = "dogcenta@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
mh='my_history.cli:cmd'

[tool.pdm]
distribution = true  

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/GITSangWoo/my_history/tree/main"
Issues = "https://github.com/GITSangWoo/my_history/issues"


