[project]
name = "my_history"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "GITSangWoo", email = "dogcenta@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
mh='my_history.cli:cmd'

[tool.pdm.scripts]
test  = "pytest"
ctest = "pytest --cov"
stest = "pytest -s"
giti = "pip install git+https://github.com/GITSangWoo/my_history.git@v0.2.0/agrp"

[tool.pdm]
distribution = true  

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]
[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[project.urls]
Homepage = "https://github.com/GITSangWoo/my_history/tree/main"
Issues = "https://github.com/GITSangWoo/my_history/issues"


